Update CustomerServiceTest.java